<resources>
    <string name="app_name">L6Ex1ObjetoProfessor</string>
    <string name="titular">Titular</string>
    <string name="horista">Horista</string>
    <string name="nome">Nome</string>
    <string name="matricula">Matrícula</string>
    <string name="idade">Idade</string>
    <string name="anos">Anos na instituição:</string>
    <string name="horas">Horas de aula dadas:</string>
    <string name="salario">Salário do professor:</string>
    <string name="valor">Valor da hora aula:</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">R$</string>
</resources>